--- a/Systeme/RC1SA.tex
+++ b/Systeme/RC1SA.tex
@@ -1,84 +1,230 @@
-\chapter{Les ouvertures}
+\chapter{L'ouverture de 1\NT}
 
+L'ouverture de 1NT provient d'une main de 12-14H sans majeure quatrième mais éventuellement avec une majeure cinquième. Beaucoup de mains 5-4-2-2 ou 6-3-2-2 sont éligibles à l'ouverture de 1\NT. Notamment, les mains de 12-13H avec 5 cartes à cœur, une mineure quatrième et deux doubletons gardés. A partir de 14H, on utilisera plutôt une ouverture au niveau de 2 avec ce genre de main semi-régulière.
 
-\begin{multicols}{2}
+Avec un fit 5-3 en majeure, une main régulière en face d'une main régulière, il n'est pas prioritaire de jouer en majeure. Par contre, rater un fit 4-4 en majeure das cette zone est à la fois grave et hors champ. En tournoi par paires, c'est un zéro garanti. C'est sans doute le plus grand frein à l'adoption du \NT faible.  Pour contourner cet écueil, on n'ouvre jamais de 1\NT avec une majeure quatrième. Cela diminue fortement la fréquence d'utilisation de l'enchère. Mais comme la zone 12-14 est beaucoup plus fréquente que la zone 15-17, on est à l'équilibre.
 
+Évidemment, il n'y a pas de Stayman ! La  réponse de 2\T est une demande de majeure cinquième. On peut la qualifier de \textit{Puppet Stayman}. On l'utilisera avec presque toutes les mains limites de manche. Reparler après un Texas est presque toujours forcing de manche et l'enchère de 2\NT, bicolore mineur est forcing de manche.
+Avec une courte à \T et un jeu faible ou moyen, il est possible d'utiliser 2\T avec l'intention de passer sur toute réponse.
 
-\section*{Les  unicolores}
+Avec un bicolore majeur 5-5, le répondant utilise la séquence 1SA-2\K-2\C-2\P avec un jeu limite de manche. C'est la seule exception à la règle, toute enchère est forcing de manche après un Texas. Avec un jeu de manche, il passe par la réponse directe à 4\K. Et avec un jeu de chelem, il utilise la séquence 1SA-2\C-2\P-3C.
 
-
-Attention, les mains 5-3-3-2 sont toujours considérées comme des mains régulières, même avec une majeure cinquième.
-Les unicolores mineurs 6-3-2-2 de 12 à 14H s'ouvrent de 1SA.
-
-Avec les piques, on ouvre de 1\P de 11H à 17H et de 1\K à partir de 18H. L'ouverture de 1\P est la seule ouverture agressive du système.
-Avec un bicolore 5-5 à honneurs concentrés, on peut ouvrir avec 10 points d'honneur seulement.
-
-Avec 6 cartes à \P, on ouvre de 2\P jusqu'à 10H et de 1\P à partir de  11H. Il n'y a pas de zone grise où on est trop fort pour ouvrir de 2\P et trop faible pour ouvrir de 1\P. En fonction de la position et de la vulnérabilité, la limite basse de l'ouverture de 2\P est élastique.
-
-Avec les cœurs, on ouvre de 2\C de 12H à 14H et de 1\T au delà.
-
-Avec les trèfles, on ouvre de 2\T de 12H à 14H et de 1\C au delà.
-
-
-Avec les carreaux, on ouvre de 2\K de 12H à 14H et de 1\C au delà.
-
-\section*{L'ouverture de 2SA}
-
-Les mains régulières de 20 ou 21H s'ouvrent de 2SA. Cette ouverture est prioritaire même avec une majeure 4\ieme ou 5\ieme.
-
-\section*{Les bicolores majeurs}
-
-Dans la première zone de l'ouverture, de 12 à 14H, on annonce toujours les piques avant les cœurs. Donc avec 4 cartes à \P et 5 cartes à \C, on ouvre de 1\K.
-
-Avec un jeu fort, 15H et plus, on annonce la couleur la plus longue en premier. On ouvre donc de 1\T avec les \C et de 1\P (ou de 1\K avec les jeux très forts, 18H+, avec les piques.)
-En cas d'égalité, 5-5, ou 6-6, on nomme les \P en premier.
-
-Avec un beau bicolore majeur, sans point perdu, on peut ouvrir à 11H et parfois même à 10H avec un beau bicolore 5-5.
-
-
-\section*{Les bicolores mineurs}
-
-Les mains 5-4-2-2 sont systématiquement assimilées à des mains régulières et n'entrent pas dans la cadre de ce paragraphe.
-A partir de 15H, les bicolores mineurs s'ouvrent de 1\C.
-De 12 à 14H, dans une main 5-4-3-1 ou 6-5, on ouvre dans la couleur la plus longue au niveau de 2.
-Avec un bicolore 5-5 ou 6-6, on ouvre de 2\K.
-
-\section*{Mixte majeur-mineur}
-
-Qu'elle soit quatrième ou cinquième, \textbf{on nomme toujours la majeure en premier.}
-Avec 5 cartes à cœur, une mineure quatrième et deux doubletons incluant des honneurs, dans une main de 12H à 14H, on pourra choisir d'ouvrir la main de 1SA.
-
-\section*{Les mains régulières}
-
-Les mains 4-4-4-1 suivent la même logique que les mains régulières.
-
-Dans la zone 12-14H, on ouvre de 1\NT sans majeure 4\ieme (mais possiblement avec une majeure 5\ieme), on ouvre de 1\T suivi d'une redemande à 1\P avec 4 cartes à \C (et éventuellement 4 cartes à \P) et on ouvre de 1\K suivi d'une redemande à 1\P avec 4 cartes à \P sans 4 cartes à \C.
-
-Dans la zone 15-17H, on ouvre de 1\C sans majeure 4\ieme, on ouvre de 1\T suivi d'une redemande à 1\NT avec 4 ou 5 cartes à \C et on ouvre de 1\K suivi d'une redemande à 1\NT avec 4 ou 5 cartes à \P.
-
-Dans la zone 18-19H, on ouvre de 1\T, 1\K ou 1\C selon les majeures. La redemande est variable. On redemande 1\NT si le répondant a utilisé le signal de faiblesse à 1\P. Sur le relai ordinaire (1\K sur 1\T ou 1\C sur 1\K), on nomme la majeure au niveau de un avant de faire la redemande à 2\NT.
-
-Dans la zone 20-21H, on ouvre de 2\NT.
-
-Au dela de 22H, on ouvre au niveau de un et on fera une redemande à saut (forcing de manche) sauf sur le signal de faiblesse à 1\P qui décale la zone forcing de manche à 24HL.
-\end{multicols}
-
-
- \enchbox{Tableau des ouvertures}
+\enchbox{Ouverture de 1\NT}
 {
- 1\T & 12H+ & 4+ cartes à \C (\T ou \K possiblement plus long)\\
- 1\K & 12H+ & 4+ cartes à \P(\T \K ou \C possiblement plus long)\\
- 1\C & 15H+ & pas de majeure 4\ieme\\
- 1\P & 11-17H & 5 cartes à \P\\
- 1\NT & 12-14H & régulier\\
- 2\T & 12-14H & 5+ cartes à \T\\
- 2\K & 12-14H & 5+ cartes à \K\\
- 2\C & 12-14H & 5+ cartes à \C, 0-3 cartes à \P\\
- 2\P & 0-10H & 6 cartes à \P\\
- 2\NT & 20-21H & régulier\\
- 3\T à 4\P &5-10H& barrage constructif (sauf vert contre rouge)\\
+2\T &0H+& puppet stayman \\
+-> &  2\K & pas de majeure cinquième\\
+\rw -> & 2\C & 5 cartes à \C \\
+ -> &  2\P & 5 cartes à \P \\
+2\K &0H+& texas \C \\
+2\C &0H+& texas \P \\
+2\P &0H+& texas \T \\
+2\NT &12H+& bicolore mineur\\
+3\T &0H+& texas \K \\
+3\K &16+& texas \C de chelem\\
+3\C &16H+& texas \P de chelem\\
+3\NT &12H+& pour les jouer\\
+4\K & 12H+& 5-5 majeur \\
 }
 
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\titre{1\NT -- 2\T -- 2\K}
 
+L'ouvreur n'a pas de majeure cinquième. Le répondant va maintenant expliquer ses intentions. Avec un singleton, il l'annonce. Si l'ouvreur ne peut pas conclure à 3SA, il sera toujours temps de trouver un contrat de substitution.
+
+\enchbox{1\NT -- 2\T -- 2\K}
+{
+2\C & 10-11H & 5 cartes à \C \\
+2\P & 10-11H & 5 cartes à \P \\
+2\NT & 11HL & limite \\
+3\T  & 12H+ & singleton \T \\
+3\K & 12H+ & singleton \K \\
+3\C & 12H+ & singleton \C \\
+3\P & 12H+ & singleton \P \\
+}
+
+
+\newpage
+
+\titre{1\NT -- 2\K -- 2\C}
+
+Le répondant possède au moins 5 cartes à \C. Il n'a pas 5 cartes à \P. S'il possède 6 cartes à \C, il n'a pas d'ambitions de chelem.
+
+
+En dehors des conclusions à 3SA et 4\C, le répondant a deux façon de procéder. Il peut annoncer un bicolore au moins 5-5. Les enchères naturelles de 3\T et 3\K sont utiles à cet effet.
+
+Avec un singleton dans une main 5-4-3-1 (ou plus rarement 5-4-4-0), le répondant annonce son singleton et l'ouvreur avisera. Pour annoncer le singleton, le répondant commence par dire 2\NT, l'ouvreur fait un relai à 3\T et le répondant annonce la couleur de son singleton (3\C = singleton \T).
+
+
+\enchbox{1\NT -- 2\K -- 2\C}{
+2\P && 5-5 limite\\
+-> & 2\NT & relai\\
+->->&& 3\T\ 5 cartes limite  \\
+->->&& 3\K\ 5 cartes limite  \\
+->->&& 3\C\ 5-5 majeur limite  \\
+2\NT && J'ai un singleton \\
+-> & 3\T\ & relai\\
+->->&& 3\K singleton \K \\
+->->&& 3\C singleton \T \\
+->->&& 3\P singleton \P \\
+3\T && 5 cartes\\
+3\K && 5 cartes\\
+3\C && 6 cartes \\
+3\NT && choix de manche\\
+4\C && pour les jouer\\
+}
+
+
+\newpage
+
+\titre{1\NT -- 2\C -- 2\P}
+
+Le répondant possède au moins 5 cartes à \P. S'il possède 6 cartes à \P, il n'a pas d'ambitions de chelem. S'il possède 5 cartes à \C, il aura des ambitions de chelem.
+
+D'autre part, il ne possède pas une main limite de manche (2\T serait obligatoire dans ce cas). Donc toutes les enchères sont forcing de manche.
+
+En dehors des conclusions à 3SA et 4\P, le répondant a deux façon de procéder. Il peut annoncer un bicolore au moins 5-5. Les enchères naturelles de 3\T et 3\K sont utiles à cet effet.
+
+Avec un singleton dans une main 5-4-3-1 (ou plus rarement 5-4-4-0), le répondant annonce son singleton et l'ouvreur avisera. Pour annoncer le singleton, le répondant commence par dire 2\NT, l'ouvreur fait un relai à 3\T et le répondant annonce la couleur de son singleton (3\P = singleton \T).
+
+
+
+\enchbox{1\NT -- 2\C -- 2\P}{
+2\NT && singleton indéterminé\\
+-> & 3\T\ >& 3\K singleton \K \\
+\rb -> & 3\T\ >& 3\C singleton \C \\
+-> & 3\T\ >& 3\P singleton \T \\
+3\T && 5 cartes\\
+3\K && 5 cartes\\
+3\C && 5-5 de chelem\\
+3\NT && choix de manche\\
+4\P && Fin\\
+
+}
+
+\newpage
+
+\titre{1\NT -- 2\P}
+
+Le répondant possède 6 cartes à \T ou 5 cartes et une volonté de chelem (19-20H).
+
+L'ouvreur peut utiliser l'enchère de 2\NT avec deux gros honneurs troisièmes. Sinon il rectifie à 3\T. Le répondant nomme alors éventuellement son singleton.
+
+\enchbox{1 \NT--2\P}
+{
+2\NT & 14H & deux gros honneurs \\
+3\T  & & wait and see\\
+-> & 3\K & singleton \K \\
+-> & 3\C & singleton \C \\
+-> & 3\P & singleton \P \\
+-> & 3\NT& tentative de chelem \\
+}
+
+\newpage
+
+\titre{1\NT -- 2\NT}
+
+L'enchère de 2\NT indique un bicolore mineur. Sans majeure cinquième, l'ouvreur peut fixer l'atout en disant 3\T ou 3\K.
+Le répondant annonce alors son singleton à 3\C ou 3\P, ce qui laisse l'occasion à l’ouvreur de freiner avec des points perdus.
+
+Avec une majeure cinquième, l'ouvreur nomme sa majeure.
+
+\enchbox{1\NT -- 2\NT}
+{
+3\T && beau fit \\
+3\K && beau fit \\
+3\C && 5 cartes \\
+3\P && 5 cartes \\
+3\NT && décourageant \\
+}
+
+\newpage
+
+\titre{1\NT -- 3\T}
+
+
+Le répondant possède 6 cartes à \K ou 5 cartes et une volonté de chelem (19-20H).
+
+L'ouvreur rectifie et le répondant annonce son singleton. 3\NT avec un singleton \T sans volonté de chelem.
+
+\enchbox{1\NT -- 3\T}
+{
+3\K  && obligatoire \\
+-> & 3\K & singleton \K \\
+-> & 3\C & singleton \C \\
+-> & 3\NT & singleton \T \\
+-> & 4\T & singleton \T chelem\\
+-> & 4\NT & quantitatif \\
+}
+
+\titre{Réaction à un contre punitif}
+
+\begin{multicols}{2}
+
+
+Lorsque les adversaires contrent notre ouverture de 1\NT, ce contre est, le plus souvent punitif, et même s'il ne l'est pas officiellement, le partenaire du contreur passera souvent. Il en est de même du contre de réveil.
+
+Aussi, le système s'organise autour de la recherche du meilleur fit possible afin de minimiser la pénalité. De temps à autre, le répondant aura un jeu fort. Dans ce cas, il peut commencer par passer ou par surcontrer, ces deux enchères étant forcing. avec une main unicolore très forte, il commence par surcontrer avant d'annoncer sa couleur. En cas de bicolore très fort, il commence par passer avant d'annoncer une de ses couleurs.
+
+La procédure d'échappement est basée sur deux principes :
+
+\begin{itemize}
+ \item Le \Redouble indique une \textbf{égalité entre les mineures} ou rarement un jeu unicolore très fort. La \Pass indique qu'on a une préférence pour une des deux mineures (ou un jeu très fort bicolore voire tricolore).
+ \item Le système est \textbf{symétrique}. Si le surcontre a lieu en réveil, l'ouvreur utilise les même système que si c'était son partenaire qui avait ouvert de 1\NT. \textit{Pour des raisons combinatoires, l'ouvreur ne peut pas être ni fort ni 3-3 en mineure.}
+\end{itemize}
+
+\enchbox{1\NT<\Double!>}
+{
+\Pass && bicolore fort ou  \\
+\rw && préférence \T ou \\
+&& préférence \K \\
+-> & \Redouble! & pas de couleur 5\ieme \\
+\rb &->-> & 2\T  \quad  préférence \\
+\rb &->-> & 2\K  \quad   préférence \\
+\rb &->-> & 2\C  \quad  naturel forcing \\
+\rb &->-> & 2\P  \quad  naturel forcing \\
+-> & 2\T & 5+ cartes \\
+-> & 2\K & 5+ cartes \\
+-> & 2\C & 5 cartes \\
+-> & 2\P & 5 cartes \\
+\Redouble! && unicolore fort ou\\
+\rw && 4-4 ou 3-3 mineur \\
+\rb-> & 2\T & 4+ cartes \\
+-> & 2\K & 4+ cartes \\
+\rb-> & 2\C & 5 cartes \\
+-> & 2\P & 5 cartes \\
+2\T && naturel\\
+2\K && naturel\\
+2\C && naturel\\
+2\P && naturel\\
+}
+
+
+
+\enchbox{1\NT<\Pass> \Pass <\Double!>}
+{
+\Pass && 4-3 mineur\\
+-> & \Redouble! & pas de couleur 5\ieme \\
+\rw &->-> & 2\T  \quad  4 cartes \\
+&->-> & 2\K  \quad  4 cartes \\
+-> & 2\T & 5+ cartes \\
+-> & 2\K & 5+ cartes \\
+\Redouble! && 4-4 mineur\\
+\rb --> & 2\T & 3+ cartes \\
+\rb --> & 2\K & 3+ cartes \\
+\rb --> & 2\C & 5 cartes \\
+\rb --> & 2\P & 5 cartes \\
+2\T && naturel\\
+2\K && naturel\\
+2\C && naturel\\
+2\P && naturel\\
+}
+
+\titre{Réaction aux interventions diverses}
+
+Inutile de modifier le système auquel vous êtes habitué ici.
+Le système le plus populaire, le Rubensol, est efficace quelle que soit la zone de l'ouverture de 1\NT.
+
+
+\end{multicols}
