--- a/Systeme/RC1SA.tex
+++ b/Systeme/RC1SA.tex
@@ -174,12 +174,12 @@ La procédure d'échappement est basée sur deux principes :
  \item Le système est \textbf{symétrique}. Si le surcontre a lieu en réveil, l'ouvreur utilise les même système que si c'était son partenaire qui avait ouvert de 1\NT. \textit{Pour des raisons combinatoires, l'ouvreur ne peut pas être ni fort ni 3-3 en mineure.}
 \end{itemize}
 
-\enchbox{1\NT<\Double!>}
+\enchbox{1\NT<\Double>}
 {
 \Pass && bicolore fort ou  \\
 \rw && préférence \T ou \\
 && préférence \K \\
--> & \Redouble! & pas de couleur 5\ieme \\
+-> & \Redouble & pas de couleur 5\ieme \\
 \rb &->-> & 2\T  \quad  préférence \\
 \rb &->-> & 2\K  \quad   préférence \\
 \rb &->-> & 2\C  \quad  naturel forcing \\
@@ -188,7 +188,7 @@ La procédure d'échappement est basée sur deux principes :
 -> & 2\K & 5+ cartes \\
 -> & 2\C & 5 cartes \\
 -> & 2\P & 5 cartes \\
-\Redouble! && unicolore fort ou\\
+\Redouble && unicolore fort ou\\
 \rw && 4-4 ou 3-3 mineur \\
 \rb-> & 2\T & 4+ cartes \\
 -> & 2\K & 4+ cartes \\
@@ -202,15 +202,15 @@ La procédure d'échappement est basée sur deux principes :
 
 
 
-\enchbox{1\NT<\Pass> \Pass <\Double!>}
+\enchbox{1\NT<\Pass> \Pass <\Double>}
 {
 \Pass && 4-3 mineur\\
--> & \Redouble! & pas de couleur 5\ieme \\
+-> & \Redouble & pas de couleur 5\ieme \\
 \rw &->-> & 2\T  \quad  4 cartes \\
 &->-> & 2\K  \quad  4 cartes \\
 -> & 2\T & 5+ cartes \\
 -> & 2\K & 5+ cartes \\
-\Redouble! && 4-4 mineur\\
+\Redouble && 4-4 mineur\\
 \rb --> & 2\T & 3+ cartes \\
 \rb --> & 2\K & 3+ cartes \\
 \rb --> & 2\C & 5 cartes \\
