--- a/Systeme/RC1SA.tex
+++ b/Systeme/RC1SA.tex
@@ -180,10 +180,10 @@ La procédure d'échappement est basée sur deux principes :
 \rw && préférence \T ou \\
 && préférence \K \\
 -> & \Redouble & pas de couleur 5\ieme \\
-\rb &->-> & 2\T  \quad  préférence \\
-\rb &->-> & 2\K  \quad   préférence \\
-\rb &->-> & 2\C  \quad  naturel forcing \\
-\rb &->-> & 2\P  \quad  naturel forcing \\
+\rb ->-> && 2\T  \quad  préférence \\
+\rb ->-> && 2\K  \quad   préférence \\
+\rb ->-> && 2\C  \quad  naturel forcing \\
+\rb ->-> && 2\P  \quad  naturel forcing \\
 -> & 2\T & 5+ cartes \\
 -> & 2\K & 5+ cartes \\
 -> & 2\C & 5 cartes \\
@@ -206,8 +206,8 @@ La procédure d'échappement est basée sur deux principes :
 {
 \Pass && 4-3 mineur\\
 -> & \Redouble & pas de couleur 5\ieme \\
-\rw &->-> & 2\T  \quad  4 cartes \\
-&->-> & 2\K  \quad  4 cartes \\
+\rw ->-> && 2\T  \quad  4 cartes \\
+->-> && 2\K  \quad  4 cartes \\
 -> & 2\T & 5+ cartes \\
 -> & 2\K & 5+ cartes \\
 \Redouble && 4-4 mineur\\
